# cda-case1

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  STRUCTURE.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: index.md  mkdocs.yml
notebooks/: analysis.ipynb  analysisHlynur.ipynb
src/: __init__.py  data_processing.py  models.py  visualization.py
tests/: __init__.py  test_data_processing.py
